--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-mountroutes",
-  "description": "Automatic mount routing for Express",
-  "version": "1.1.0",
+  "description": "Automatic mount routing for Express from file system",
+  "version": "1.3.0",
   "main": "index.js",
   "license": "MIT",
   "contributors": [
@@ -14,9 +14,12 @@
     "auto",
     "web"
   ],
+  "scripts": {
+    "test": "node ./test/index.js"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wjszxli/express-autoRoutes"
+    "url": "git+https://github.com/wjszxli/express-mountRoutes"
   },
   "engines": {
     "node": ">= 6.10.0"
